# ccpm

./: .editorconfig  .gitignore  CLAUDE.md  Cargo.toml  FEATURE_PLAN.md  LICENSE  README.md  TASK.md
.github/workflows/: ci.yml  release.yml
Formula/: ccpm.rb
docs/: architecture.md
src/: app.rs  lib.rs  main.rs
src/cli/: mod.rs
src/plugin/: config.rs  discovery.rs  mod.rs  operations.rs
src/ui/: detail_modal.rs  details.rs  dialogs.rs  help.rs  mod.rs  plugin_list.rs
tests/: integration.rs
