[package]
name = "ccpm"
version = "0.1.0"
edition = "2021"
authors = ["CCPM Contributors"]
description = "Claude Code Plugin Manager - A TUI for managing Claude Code plugins"
license = "MIT"
repository = "https://github.com/ccpm/ccpm"
readme = "README.md"
keywords = ["claude", "plugin", "tui", "manager", "cli"]
categories = ["command-line-utilities", "development-tools"]
rust-version = "1.70"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
clap = { version = "4.5", features = ["derive"] }
thiserror = "2.0"
color-eyre = "0.6"
toml = "0.8"
fs2 = "0.4"

[dev-dependencies]
tempfile = "3.14"
assert_cmd = "2.0"
predicates = "3.1"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
